--- a/public/css/resume.css
+++ b/public/css/resume.css
@@ -7,7 +7,7 @@ ul {
 }
 
 .resume {
-  width: 541px;
+  width: 90%;
   margin-top: 36px;
   border-radius: 10px;
   background-color: var(--clr-accent-300);
@@ -199,6 +199,6 @@ ul {
 
 @media (max-height: 820px) {
   .resume {
-    width: 541px;
+    width: 90%;
   }
 }
